test/testData/parser/negative/externInit.c

extern int tl = 10;

void testF(int b) {
  extern int l = b;
}
